--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,9 @@
       <!-- Программа -->
       <section class="program">
         <div class="program__wrapper container">
-          <h2 class="program__title">Функциональное питание для котов</h2>
+          <h2 class="program__title title title--large">
+            Функциональное питание для котов
+          </h2>
           <p class="program__slogan">Занялся собой? Займись котом!</p>
           <button class="program__link button" type="button">
             подобрать программу
@@ -76,7 +78,7 @@
             class="program-types__type program-type program-type--weight-loss"
           >
             <h2 class="program-type__title title">Похудение</h2>
-            <p class="program-type__text">
+            <p class="program-type__description description">
               Ваш кот весит больше собаки и почти утратил способность лазить по
               деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу
               сбросить лишний вес.
@@ -86,7 +88,7 @@
 
           <div class="program-types__type program-type program-type--mass-gain">
             <h2 class="program-type__title title">Набор массы</h2>
-            <p class="program-type__text">
+            <p class="program-type__description description">
               Заработать авторитет среди дворовых котов и даже собак? Серия Cat
               Energy Pro поможет вашему коту нарастить необходимые мышцы!
             </p>
