--- a/src/form.html
+++ b/src/form.html
@@ -69,28 +69,28 @@
               class="program-selection__information-container information-container"
             >
               <label
-                class="program-selection__field-label program-selection__field-label--lignt-grey"
+                class="program-selection__field-label field-label field-label--name"
                 >Имя:*
                 <input
-                  class="program-selection__field-input"
+                  class="program-selection__field-input field-input"
                   name="name"
                   placeholder="Барсик"
                 />
               </label>
               <label
-                class="program-selection__field-label program-selection__field-label--lignt-grey"
+                class="program-selection__field-label field-label field-label--weight"
                 >Вес (кг):*
                 <input
-                  class="program-selection__field-input"
+                  class="program-selection__field-input field-input"
                   name="weight"
                   placeholder="7"
                 />
               </label>
               <label
-                class="program-selection__field-label program-selection__field-label--lignt-grey"
+                class="program-selection__field-label field-label field-label--age"
                 >Возраст (лет):
                 <input
-                  class="program-selection__field-input"
+                  class="program-selection__field-input field-input"
                   name="age"
                   placeholder="7"
                 />
@@ -99,9 +99,7 @@
             <div
               class="program-selection__program-types-container program-types-container"
             >
-              <label
-                class="program-selection__field-label program-selection__field-label--lignt-black"
-              >
+              <label class="program-selection__field-label field-label">
                 <input
                   class="program-selection__field-input"
                   type="radio"
@@ -109,9 +107,7 @@
                 />
                 Похудение
               </label>
-              <label
-                class="program-selection__field-label program-selection__field-label--lignt-black"
-              >
+              <label class="program-selection__field-label field-label">
                 <input
                   class="program-selection__field-input"
                   type="radio"
@@ -119,15 +115,44 @@
                 />
                 Набор массы
               </label>
-              <label
-                class="program-selection__field-label program-selection__field-label--lignt-black"
-              >
+              <label class="program-selection__field-label field-label">
                 <input
                   class="program-selection__field-input"
                   type="radio"
                   name="your-advice"
                 />
                 Не знаю (Нужен ваш совет)
+              </label>
+            </div>
+          </div>
+        </section>
+
+        <!-- Контактные данные -->
+        <section class="contact-details">
+          <div class="contact-details__wrapper">
+            <h2 class="contact-details__title title title--medium">
+              Контактные данные (владельца кота)
+            </h2>
+            <div
+              class="contanct-details__information-container information-container"
+            >
+              <label
+                class="contact-details__field-label field-label field-label--email"
+                >E-mail:*
+                <input
+                  class="contact-details__field-input field-input"
+                  name="email"
+                  placeholder="kuklachev@gmail.com"
+                />
+              </label>
+              <label
+                class="contact-details__field-label field-label field-label--phone"
+                >Телефон:*
+                <input
+                  class="contact-details__field-input field-input"
+                  name="phone"
+                  placeholder="8 (960) 900-60-90"
+                />
               </label>
             </div>
           </div>
