--- a/src/form.html
+++ b/src/form.html
@@ -141,6 +141,7 @@
                 >E-mail:*
                 <input
                   class="contact-details__field-input field-input"
+                  type="email"
                   name="email"
                   placeholder="kuklachev@gmail.com"
                 />
@@ -150,11 +151,27 @@
                 >Телефон:*
                 <input
                   class="contact-details__field-input field-input"
+                  type="tel"
                   name="phone"
                   placeholder="8 (960) 900-60-90"
                 />
               </label>
             </div>
+          </div>
+        </section>
+
+        <!-- Комментарий -->
+        <section class="comment">
+          <div class="comment__wrapper container">
+            <h2 class="comment__title title title--medium">Комментарий</h2>
+            <label class="comment__field-label">
+              <textarea
+                class="comment__textarea textarea"
+                cols="30d"
+                rows="8"
+                placeholder="Расскажите обо всех повадках кота"
+              ></textarea>
+            </label>
           </div>
         </section>
       </form>
