--- a/src/form.html
+++ b/src/form.html
@@ -9,7 +9,7 @@
     <!-- Шапка -->
     <header class="main-header">
       <div class="main-header__wrapper container">
-        <a class="main-header__logo" href="#">
+        <a class="main-header__logo" href="index.html">
           <img
             src="./img/logo-cat-energy-icon-mobile.svg"
             width="33"
@@ -34,15 +34,15 @@
 
           <div class="main-nav__wrapper">
             <ul class="main-nav__list site-list">
-              <li class="site__item site__item--current">
+              <li class="site-list__item site__item">
                 <a class="site-list__link" href="index.html">Главная</a>
               </li>
-              <li class="site__item">
+              <li class="site-list__item">
                 <a class="site-list__link" href="catalog.html"
                   >Каталог продукции</a
                 >
               </li>
-              <li class="site__item">
+              <li class="site-list__item site-list__item--current">
                 <a class="site-list__link" href="form.html">Подбор программы</a>
               </li>
             </ul>
