--- a/src/index.html
+++ b/src/index.html
@@ -34,15 +34,15 @@
 
           <div class="main-nav__wrapper">
             <ul class="main-nav__list site-list">
-              <li class="site__item site__item--current">
+              <li class="site-list__item site__item--current">
                 <a class="site-list__link" href="index.html">Главная</a>
               </li>
-              <li class="site__item">
+              <li class="site-list__item">
                 <a class="site-list__link" href="catalog.html"
                   >Каталог продукции</a
                 >
               </li>
-              <li class="site__item">
+              <li class="site-list__item">
                 <a class="site-list__link" href="form.html">Подбор программы</a>
               </li>
             </ul>
@@ -64,9 +64,7 @@
             Функциональное питание для котов
           </h2>
           <p class="program__slogan">Занялся собой? Займись котом!</p>
-          <button class="program__link button" type="button">
-            подобрать программу
-          </button>
+          <a class="program__link button" href="#">Подобрать программу</a>
         </div>
       </section>
 
@@ -86,7 +84,9 @@
             <a class="program-type__link" href="#">каталог slim</a>
           </div>
 
-          <div class="program-types__type program-type program-type--mass-gain">
+          <div
+            class="program-types__type program-type program-type--weight-gain"
+          >
             <h2 class="program-type__title title">Набор массы</h2>
             <p class="program-type__description description">
               Заработать авторитет среди дворовых котов и даже собак? Серия Cat
@@ -101,39 +101,39 @@
       <section class="advantages">
         <div class="advantages__wrapper container">
           <h2 class="advantages__title title">Как это работает</h2>
-          <ul class="advantages__list">
-            <li class="advantages__item">
+          <ul class="advantages__list advantages-list">
+            <li class="advantages-list__item">
               <div
-                class="advantages__icon-container advantages__icon-container--leaf"
+                class="advantages-list__icon-container advantages-list__icon-container--leaf"
               ></div>
-              <p class="advantages__text">
+              <p class="advantages-list__description description">
                 Функциональное питание содержит только полезные питательные
                 вещества.
               </p>
             </li>
-            <li class="advantages__item">
+            <li class="advantages-list__item">
               <div
-                class="advantages__icon-container advantages__icon-container--powder"
+                class="advantages-list__icon-container advantages-list__icon-container--powder"
               ></div>
-              <p class="advantages__text">
+              <p class="advantages-list__description description">
                 Выпускается в виде порошка, который нужно лишь залить кипятком и
                 готово.
               </p>
             </li>
-            <li class="advantages__item">
+            <li class="advantages-list__item">
               <div
-                class="advantages__icon-container advantages__icon-container--cutlery"
+                class="advantages-list__icon-container advantages-list__icon-container--cutlery"
               ></div>
-              <p class="advantages__text">
+              <p class="advantages-list__description description">
                 Замените один-два приема обычной еды на наше функциональное
                 питание.
               </p>
             </li>
-            <li class="advantages__item">
+            <li class="advantages-list__item">
               <div
-                class="advantages__icon-container advantages__icon-container--watch"
+                class="advantages-list__icon-container advantages-list__icon-container--watch"
               ></div>
-              <p class="advantages__text">
+              <p class="advantages-list__description description">
                 Уже через месяц наслаждайтесь изменениями к лучшему вашего
                 питомца!
               </p>
@@ -209,8 +209,8 @@
     <footer class="main-footer">
       <div class="main-footer__wrapper container">
         <!-- логотип кэт энереджи -->
-        <div class="main-footer__logo logo-cat-energy">
-          <a class="logo-cat-energy__image" href="index.html">
+        <div class="main-footer__logo logo">
+          <a class="logo__image" href="index.html">
             <img
               src="./img/logo-cat-energy-name-mobile.svg"
               width="128"
@@ -222,7 +222,7 @@
 
         <!-- соц. сети -->
         <div class="main-footer__social social">
-          <ul class="social-list">
+          <ul class="social__list">
             <li class="social__item">
               <a
                 class="social__link social__link--vkontakte"
