Добавил главный заголовок в каталог

--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
     <!-- Главное содержимое -->
     <main class="main-container">
       <h1 class="visually-hidden">
-        "Кэт энерджи" - лучшие программы для ваших котов
+        Кэт энерджи - лучшие программы для ваших котов
       </h1>
 
       <!-- Программа -->
