--- a/src/catalog.html
+++ b/src/catalog.html
@@ -49,5 +49,10 @@
         </nav>
       </div>
     </header>
+
+    <!-- Главное содержимое -->
+    <main class="main-container">
+      <h1 class="visually-hidden">Кэт энерджи - каталог</h1>
+    </main>
   </body>
 </html>
