удалил не нужные изображения и добавил используемые изображения

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -10,7 +10,7 @@
       <div class="main-header__wrapper container">
         <a class="main-header__logo" href="#">
           <img
-            src="./img/logo-cat-energy-icon-mobile.svg"
+            src="./img/cat-energy-icon-mobile.svg"
             width="33"
             height="38"
             alt="иконка кэт энерджи"
@@ -18,7 +18,7 @@
         </a>
         <div class="main-header__name-logo logo">
           <img
-            src="./img/logo-cat-energy-name-mobile.svg"
+            src="./img/cat-energy-text-mobile.svg"
             width="101"
             height="18"
             alt="Кэт энерджи"
@@ -53,6 +53,18 @@
     <!-- Главное содержимое -->
     <main class="main-container">
       <h1 class="visually-hidden">Кэт энерджи - каталог</h1>
+
+      <!-- Каталог продукции -->
+      <section class="catalog">
+        <div class="catalog__wrapper container">
+          <h2 class="catalog__title title title--large">Каталог продукции</h2>
+          <ul class="catalog__list catalog-list">
+            <li class="catalog-list__item catalog-card">
+              <img class="catalog-card__image"
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
   </body>
 </html>
