--- a/src/catalog.html
+++ b/src/catalog.html
@@ -60,7 +60,209 @@
           <h2 class="catalog__title title title--large">Каталог продукции</h2>
           <ul class="catalog__list catalog-list">
             <li class="catalog-list__item catalog-card">
+              <img
+                class="catalog-card__image"
+                src="./img/catalog/catalog-1-mobile.png"
+                width="68"
+                height="86"
+                alt="Кэт энерджи курица"
+              />
+              <h3 class="catalog-card__heading">Cat Energy Pro 500 г</h3>
+              <div class="catalog-card__compound-container">
+                <div class="catalog-card__compound">
+                  <span class="catalog-card__compound-item">Масса</span>
+                  <span class="catalog-card__compound-item">500г</span>
+                </div>
+                <div class="catalog-card__compound">
+                  <span class="catalog-card__compound-item">Вкус</span>
+                  <span class="catalog-card__compound-item">Курица</span>
+                </div>
+                <div class="catalog-card__compound">
+                  <span class="catalog-card__compound-item">Цена</span>
+                  <span class="catalog-card__compound-item">700 ₽</span>
+                </div>
+              </div>
+              <a class="catalog-card__button button button--primary" href="#"
+                >Заказать</a
+              >
+            </li>
+            <li class="catalog-list__item catalog-card">
+              <img
+                class="catalog-card__image"
+                src="./img/catalog/catalog-2-mobile.png"
+                width="84"
+                height="100"
+                alt="Кэт энерджи курица"
+              />
+              <h3 class="catalog-card__heading">Cat Energy Pro 1000 г</h3>
+              <div class="catalog-card__compound-container">
+                <div class="catalog-card__compound">
+                  <span class="catalog-card__compound-item">Масса</span>
+                  <span class="catalog-card__compound-item">1000г</span>
+                </div>
+                <div class="catalog-card__compound">
+                  <span class="catalog-card__compound-item">Вкус</span>
+                  <span class="catalog-card__compound-item">Курица</span>
+                </div>
+                <div class="catalog-card__compound">
+                  <span class="catalog-card__compound-item">Цена</span>
+                  <span class="catalog-card__compound-item">1000 ₽</span>
+                </div>
+              </div>
+              <a class="catalog-card__button button button--primary" href="#"
+                >Заказать</a
+              >
+            </li>
+            <li class="catalog-list__item catalog-card">
+              <img
+                class="catalog-card__image"
+                src="./img/catalog/catalog-3-mobile.png"
+                width="68"
+                height="78"
+                alt="Кэт энерджи рыба"
+              />
+              <h3 class="catalog-card__heading">Cat Energy Pro 500 г</h3>
+              <div class="catalog-card__compound-container">
+                <div class="catalog-card__compound">
+                  <span class="catalog-card__compound-item">Масса</span>
+                  <span class="catalog-card__compound-item">500г</span>
+                </div>
+                <div class="catalog-card__compound">
+                  <span class="catalog-card__compound-item">Вкус</span>
+                  <span class="catalog-card__compound-item">Рыба</span>
+                </div>
+                <div class="catalog-card__compound">
+                  <span class="catalog-card__compound-item">Цена</span>
+                  <span class="catalog-card__compound-item">700 ₽</span>
+                </div>
+              </div>
+              <a class="catalog-card__button button button--primary" href="#"
+                >Заказать</a
+              >
+            </li>
+            <li class="catalog-list__item catalog-card">
+              <img
+                class="catalog-card__image"
+                src="./img/catalog/catalog-4-mobile.png"
+                width="84"
+                height="100"
+                alt="Кэт энерджи рыба"
+              />
+              <h3 class="catalog-card__heading">Cat Energy Pro 1000 г</h3>
+              <div class="catalog-card__compound-container">
+                <div class="catalog-card__compound">
+                  <span class="catalog-card__compound-item">Масса</span>
+                  <span class="catalog-card__compound-item">1000г</span>
+                </div>
+                <div class="catalog-card__compound">
+                  <span class="catalog-card__compound-item">Вкус</span>
+                  <span class="catalog-card__compound-item">Рыба</span>
+                </div>
+                <div class="catalog-card__compound">
+                  <span class="catalog-card__compound-item">Цена</span>
+                  <span class="catalog-card__compound-item">1000 ₽</span>
+                </div>
+              </div>
+              <a class="catalog-card__button button button--primary" href="#"
+                >Заказать</a
+              >
+            </li>
+            <li class="catalog-list__item catalog-card">
               <img class="catalog-card__image"
+              src="./img/catalog/catalog-5-mobile.png" width="68" height=78"
+              alt="Кэт энерджи гречка" />
+              <h3 class="catalog-card__heading">Cat Energy Slim 500 г</h3>
+              <div class="catalog-card__compound-container">
+                <div class="catalog-card__compound">
+                  <span class="catalog-card__compound-item">Масса</span>
+                  <span class="catalog-card__compound-item">500г</span>
+                </div>
+                <div class="catalog-card__compound">
+                  <span class="catalog-card__compound-item">Вкус</span>
+                  <span class="catalog-card__compound-item">Гречка</span>
+                </div>
+                <div class="catalog-card__compound">
+                  <span class="catalog-card__compound-item">Цена</span>
+                  <span class="catalog-card__compound-item">400 ₽</span>
+                </div>
+              </div>
+              <a class="catalog-card__button button button--primary" href="#"
+                >Заказать</a
+              >
+            </li>
+            <li class="catalog-list__item catalog-card">
+              <img
+                class="catalog-card__image"
+                src="./img/catalog/catalog-6-mobile.png"
+                width="84"
+                height="100"
+                alt="Кэт энерджи гречка"
+              />
+              <h3 class="catalog-card__heading">Cat Energy Slim 1000 г</h3>
+              <div class="catalog-card__compound-container">
+                <div class="catalog-card__compound">
+                  <span class="catalog-card__compound-item">Масса</span>
+                  <span class="catalog-card__compound-item">1000г</span>
+                </div>
+                <div class="catalog-card__compound">
+                  <span class="catalog-card__compound-item">Вкус</span>
+                  <span class="catalog-card__compound-item">Гречка</span>
+                </div>
+                <div class="catalog-card__compound">
+                  <span class="catalog-card__compound-item">Цена</span>
+                  <span class="catalog-card__compound-item">700 ₽</span>
+                </div>
+              </div>
+              <a class="catalog-card__button button button--primary" href="#"
+                >Заказать</a
+              >
+            </li>
+            <li class="catalog-list__item catalog-card">
+              <img
+                class="catalog-card__image"
+                src="./img/catalog/catalog-7-mobile.png"
+                width="72"
+                height="84"
+                alt="Кэт энерджи рис"
+              />
+              <h3 class="catalog-card__heading">Cat Energy Slim 500 г</h3>
+              <div class="catalog-card__compound-container">
+                <div class="catalog-card__compound">
+                  <span class="catalog-card__compound-item">Масса</span>
+                  <span class="catalog-card__compound-item">500г</span>
+                </div>
+                <div class="catalog-card__compound">
+                  <span class="catalog-card__compound-item">Вкус</span>
+                  <span class="catalog-card__compound-item">Рис</span>
+                </div>
+                <div class="catalog-card__compound">
+                  <span class="catalog-card__compound-item">Цена</span>
+                  <span class="catalog-card__compound-item">500 ₽</span>
+                </div>
+              </div>
+              <a class="catalog-card__button button button--primary" href="#"
+                >Заказать</a
+              >
+            </li>
+            <li class="catalog-list__item catalog-card catalog-card--show-more">
+              <img
+                class="catalog-card__image catalog-card__image--show-more"
+                src="./img/catalog-show-more-mobile.svg"
+                width="60"
+                height="60"
+                alt="показать ещё"
+              />
+              <h3
+                class="catalog-card__heading catalog-card__heading--show-more"
+              >
+                Показать еще 100500 товаров
+              </h3>
+              <p class="catalog-card__text">
+                На самом деле вкусов гораздо больше!
+              </p>
+              <a class="catalog-card__button button button--secondary" href="#"
+                >Показать все</a
+              >
             </li>
           </ul>
         </div>
