--- a/src/catalog.html
+++ b/src/catalog.html
@@ -267,6 +267,74 @@
           </ul>
         </div>
       </section>
+
+      <!-- Дополнительные товары -->
+      <section class="additional-product">
+        <div class="additional-product__wrapper container">
+          <h2 class="additional-product__title title title--medium">
+            Дополнительные товары
+          </h2>
+          <ul class="additional-product__list additional-product-list">
+            <li class="additional-product-list__item">
+              <h3 class="additional-product-list__title">Сахарозаменитель</h3>
+              <div class="additional-product__amount">
+                <span class="additional-product__amount-package"
+                  >1 упаковка (100 г)</span
+                >
+                <span class="additional-product__amount-price">200 ₽</span>
+                <a
+                  class="additional-product__button button button--primary"
+                  href="#"
+                  >Заказать</a
+                >
+              </div>
+            </li>
+            <li class="additional-product-list__item">
+              <h3 class="additional-product-list__title">Питьевая вода</h3>
+              <div class="additional-product__amount">
+                <span class="additional-product__amount-package">5 литров</span>
+                <span class="additional-product__amount-price">50 ₽</span>
+                <a
+                  class="additional-product__button button button--primary"
+                  href="#"
+                  >Заказать</a
+                >
+              </div>
+            </li>
+            <li class="additional-product-list__item">
+              <h3 class="additional-product-list__title">Молоко</h3>
+              <div class="additional-product__amount">
+                <span class="additional-product__amount-package">1 литр</span>
+                <span class="additional-product__amount-price">100 ₽</span>
+                <a
+                  class="additional-product__button button button--primary"
+                  href="#"
+                  >Заказать</a
+                >
+              </div>
+            </li>
+            <li class="additional-product-list__item">
+              <h3 class="additional-product-list__title">Витамины</h3>
+              <div class="additional-product__amount">
+                <span class="additional-product__amount-package"
+                  >1 упаковка (30 г)</span
+                >
+                <span class="additional-product__amount-price">300 ₽</span>
+                <a
+                  class="additional-product__button button button--primary"
+                  href="#"
+                  >Заказать</a
+                >
+              </div>
+            </li>
+          </ul>
+          <div class="additional-product__gift gift">
+            <p class="additional-product__gift-text">
+              Закажите все и получите чехол для кота в подарок!
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
