--- a/src/catalog.html
+++ b/src/catalog.html
@@ -335,6 +335,25 @@
           </div>
         </div>
       </section>
+
+      <!-- Локация -->
+      <section class="location">
+        <div class="location__wrapper container">
+          <div class="location__address-wrapper">
+            <h2 class="location__address-wrapper-title">
+              приглашаем к сотрудничеству дилеров!
+            </h2>
+            <address class="location__address">
+              <p class="location__address-place">
+                ул. Большая Конюшенная, д. 19/8
+              </p>
+              <div class="location__address-city">Санкт-Петербург</div>
+            </address>
+          </div>
+          <!-- здесь будет карта -->
+          <div class="location__map map"></div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
