--- a/src/catalog.html
+++ b/src/catalog.html
@@ -355,5 +355,63 @@
         </div>
       </section>
     </main>
+
+    <!-- Подвал -->
+    <footer class="main-footer">
+      <div class="main-footer__wrapper container">
+        <!-- логотип кэт энереджи -->
+        <div class="main-footer__logo logo">
+          <a class="logo__image" href="index.html">
+            <img
+              src="./img/logo-cat-energy-name-mobile.svg"
+              width="128"
+              height="24"
+              alt="Кэт энерджи"
+            />
+          </a>
+        </div>
+
+        <!-- соц. сети -->
+        <div class="main-footer__social social">
+          <ul class="social__list">
+            <li class="social__item">
+              <a
+                class="social__link social__link--vkontakte"
+                href="https://vk.com/htmlacademy"
+                >Вконтакте</a
+              >
+            </li>
+            <li class="social__item">
+              <a
+                class="social__link social__link--youtube"
+                href="https://www.youtube.com/user/htmlacademyru"
+                >Ютуб</a
+              >
+            </li>
+            <li class="social__item">
+              <a
+                class="social__link social__link--telegram"
+                href="https://t.me/htmlacademy"
+                >Телеграм</a
+              >
+            </li>
+          </ul>
+        </div>
+
+        <!-- авторские права -->
+        <div class="main-footer__copyright copyright">
+          <a class="copyright__link" href="#">
+            <span class="copyright__link-html-academy">HTML Academy</span>
+            <img
+              class="copyright__html-academy-icon"
+              src="./img/html-academy-icon-mobile.svg"
+              width="27"
+              height="34"
+              alt="Логотип html academy"
+            />
+          </a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
