обернул подписи с полями в р

--- a/src/form.html
+++ b/src/form.html
@@ -68,36 +68,45 @@
             <div
               class="program-selection__information-container information-container"
             >
-              <label
-                class="program-selection__field-label field-label field-label--name"
-                >Имя:*
-                <input
-                  class="program-selection__field-input field-input"
-                  name="name"
-                  placeholder="Барсик"
-                  required
-                />
-              </label>
-              <label
-                class="program-selection__field-label field-label field-label--weight"
-                >Вес (кг):*
-                <input
-                  class="program-selection__field-input field-input"
-                  name="weight"
-                  placeholder="7"
-                  required
-                />
-              </label>
-              <label
-                class="program-selection__field-label field-label field-label--age"
-                >Возраст (лет):
-                <input
-                  class="program-selection__field-input field-input"
-                  name="age"
-                  placeholder="7"
-                  required
-                />
-              </label>
+              <p
+                class="program-selection__field-content field-content field-content--name"
+              >
+                <label class="field-content__field-label"
+                  >Имя:*
+                  <input
+                    class="field-content__field-input field-input"
+                    name="name"
+                    placeholder="Барсик"
+                    required
+                  />
+                </label>
+              </p>
+              <p
+                class="program-selection__field-content field-content field-content--weight"
+              >
+                <label class="field-content__field-label"
+                  >Вес (кг):*
+                  <input
+                    class="field-content__field-input field-input"
+                    name="weight"
+                    placeholder="7"
+                    required
+                  />
+                </label>
+              </p>
+              <p
+                class="program-selection__field-content field-content field-content--age"
+              >
+                <label class="field-content__field-label"
+                  >Возраст (лет):
+                  <input
+                    class="field-content__field-input field-input"
+                    name="age"
+                    placeholder="7"
+                    required
+                  />
+                </label>
+              </p>
             </div>
             <div
               class="program-selection__program-types-container program-types-container"
@@ -145,28 +154,34 @@
             <div
               class="contanct-details__information-container information-container"
             >
-              <label
-                class="contact-details__field-label field-label field-label--email"
-                >E-mail:*
-                <input
-                  class="contact-details__field-input field-input"
-                  type="email"
-                  name="email"
-                  placeholder="kuklachev@gmail.com"
-                  required
-                />
-              </label>
-              <label
-                class="contact-details__field-label field-label field-label--phone"
-                >Телефон:*
-                <input
-                  class="contact-details__field-input field-input"
-                  type="tel"
-                  name="phone"
-                  placeholder="8 (960) 900-60-90"
-                  required
-                />
-              </label>
+              <p
+                class="contact-details__field-content field-content field-content--email"
+              >
+                <label class="field-content__field-label"
+                  >E-mail:*
+                  <input
+                    class="field-content__field-input field-input"
+                    type="email"
+                    name="email"
+                    placeholder="kuklachev@gmail.com"
+                    required
+                  />
+                </label>
+              </p>
+              <p
+                class="contact-details__field-content field-content field-content--phone"
+              >
+                <label class="field-content__field-label"
+                  >Телефон:*
+                  <input
+                    class="field-content__field-input field-input"
+                    type="tel"
+                    name="phone"
+                    placeholder="8 (960) 900-60-90"
+                    required
+                  />
+                </label>
+              </p>
             </div>
           </div>
         </section>
