--- a/src/index.html
+++ b/src/index.html
@@ -10,45 +10,60 @@
     <!-- Шапка -->
     <header class="main-header">
       <div class="main-header__wrapper container">
-        <a class="main-header__logo" href="#">
-          <img
-            src="./img/cat-energy-icon-mobile.svg"
-            width="33"
-            height="38"
-            alt="иконка кэт энерджи"
-          />
-        </a>
-        <div class="main-header__name-logo logo">
-          <img
-            src="./img/cat-energy-text-mobile.svg"
-            width="101"
-            height="18"
-            alt="Кэт энерджи"
-          />
+        <div class="main-header__container-nav">
+          <a class="main-header__icon-logo" href="#">
+            <img
+              src="./img/cat-energy-icon-mobile.svg"
+              width="33"
+              height="38"
+              alt="иконка кэт энерджи"
+            />
+          </a>
+          <div class="main-header__name-logo logo">
+            <img
+              src="./img/cat-energy-text-mobile.svg"
+              width="101"
+              height="18"
+              alt="Кэт энерджи"
+            />
+          </div>
+
+          <!-- Навигация -->
+          <nav class="main-nav">
+            <button class="main-nav__toggle" type="button">
+              <span class="visually-hidden"> Открыть меню </span>
+            </button>
+
+            <div class="main-nav__wrapper">
+              <ul class="main-nav__list site-list">
+                <li class="site-list__item site__item--current">
+                  <a class="site-list__link" href="index.html">Главная</a>
+                </li>
+                <li class="site-list__item">
+                  <a class="site-list__link" href="catalog.html"
+                    >Каталог продукции</a
+                  >
+                </li>
+                <li class="site-list__item">
+                  <a class="site-list__link" href="form.html"
+                    >Подбор программы</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </nav>
         </div>
 
-        <!-- Навигация -->
-        <nav class="main-nav">
-          <button class="main-nav__toggle" type="button">
-            <span class="visually-hidden"> Открыть меню </span>
-          </button>
-
-          <div class="main-nav__wrapper">
-            <ul class="main-nav__list site-list">
-              <li class="site-list__item site__item--current">
-                <a class="site-list__link" href="index.html">Главная</a>
-              </li>
-              <li class="site-list__item">
-                <a class="site-list__link" href="catalog.html"
-                  >Каталог продукции</a
-                >
-              </li>
-              <li class="site-list__item">
-                <a class="site-list__link" href="form.html">Подбор программы</a>
-              </li>
-            </ul>
+        <!-- Программа -->
+        <section class="program">
+          <div class="program__wrapper container">
+            <h2 class="program__title title title--large">
+              Функциональное питание для котов
+            </h2>
+            <p class="program__slogan">Занялся собой? Займись котом!</p>
+            <a class="program__link button" href="#">Подобрать программу</a>
           </div>
-        </nav>
+        </section>
       </div>
     </header>
 
@@ -57,17 +72,6 @@
       <h1 class="visually-hidden">
         Кэт энерджи - лучшие программы для ваших котов
       </h1>
-
-      <!-- Программа -->
-      <section class="program">
-        <div class="program__wrapper container">
-          <h2 class="program__title title title--large">
-            Функциональное питание для котов
-          </h2>
-          <p class="program__slogan">Занялся собой? Займись котом!</p>
-          <a class="program__link button" href="#">Подобрать программу</a>
-        </div>
-      </section>
 
       <!-- Виды программ -->
       <section class="program-types">
