Сделал адаптивным программу под каждый вьюпорт.

--- a/src/index.html
+++ b/src/index.html
@@ -55,14 +55,21 @@
         </div>
 
         <!-- Программа -->
-        <section class="program">
-          <div class="program__wrapper container">
+        <section class="program program__wrapper container">
+          <div class="program__wrapper-description">
             <h2 class="program__title title title--large">
               Функциональное питание для котов
             </h2>
             <p class="program__slogan">Занялся собой? Займись котом!</p>
             <a class="program__link button" href="#">Подобрать программу</a>
           </div>
+          <img
+            class="program__image"
+            src="./img/program-package-mobile.png"
+            width="280"
+            height="270"
+            alt="Функциональное питание со вкусом курицы"
+          />
         </section>
       </div>
     </header>
