--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <header class="main-header">
       <div class="main-header__wrapper container">
         <div class="main-header__container-nav">
-          <a class="main-header__icon-logo" href="#">
+          <a class="main-header__icon-logo" href="index.html">
             <img
               src="./img/cat-energy-icon-mobile.svg"
               width="33"
@@ -55,21 +55,23 @@
         </div>
 
         <!-- Программа -->
-        <section class="program program__wrapper container">
-          <div class="program__wrapper-description">
-            <h2 class="program__title title title--large">
-              Функциональное питание для котов
-            </h2>
-            <p class="program__slogan">Занялся собой? Займись котом!</p>
-            <a class="program__link button" href="#">Подобрать программу</a>
+        <section class="program">
+          <div class="program__wrapper container">
+            <div class="program__wrapper-description">
+              <h2 class="program__title title title--large">
+                Функциональное питание для котов
+              </h2>
+              <p class="program__slogan">Занялся собой? Займись котом!</p>
+              <a class="program__link button" href="#">Подобрать программу</a>
+            </div>
+            <img
+              class="program__image"
+              src="./img/program-package-mobile.png"
+              width="280"
+              height="270"
+              alt="Функциональное питание со вкусом курицы"
+            />
           </div>
-          <img
-            class="program__image"
-            src="./img/program-package-mobile.png"
-            width="280"
-            height="270"
-            alt="Функциональное питание со вкусом курицы"
-          />
         </section>
       </div>
     </header>
@@ -109,43 +111,43 @@
         </div>
       </section>
 
-      <!-- Преимущества -->
-      <section class="advantages">
-        <div class="advantages__wrapper container">
-          <h2 class="advantages__title title">Как это работает</h2>
-          <ul class="advantages__list advantages-list">
-            <li class="advantages-list__item">
+      <!-- Как это работает -->
+      <section class="work-principle">
+        <div class="work-principle__wrapper container">
+          <h2 class="work-principle__title title">Как это работает</h2>
+          <ul class="work-principle__list work-principle-list">
+            <li class="work-principle-list__item">
               <div
-                class="advantages-list__icon-container advantages-list__icon-container--leaf"
+                class="work-principle-list__icon-container work-principle-list__icon-container--leaf"
               ></div>
-              <p class="advantages-list__description description">
+              <p class="work-principle-list__description description">
                 Функциональное питание содержит только полезные питательные
                 вещества.
               </p>
             </li>
-            <li class="advantages-list__item">
+            <li class="work-principle-list__item">
               <div
-                class="advantages-list__icon-container advantages-list__icon-container--powder"
+                class="work-principle-list__icon-container work-principle-list__icon-container--powder"
               ></div>
-              <p class="advantages-list__description description">
+              <p class="work-principle-list__description description">
                 Выпускается в виде порошка, который нужно лишь залить кипятком и
                 готово.
               </p>
             </li>
-            <li class="advantages-list__item">
+            <li class="work-principle-list__item">
               <div
-                class="advantages-list__icon-container advantages-list__icon-container--cutlery"
+                class="work-principle-list__icon-container work-principle-list__icon-container--cutlery"
               ></div>
-              <p class="advantages-list__description description">
+              <p class="work-principle-list__description description">
                 Замените один-два приема обычной еды на наше функциональное
                 питание.
               </p>
             </li>
-            <li class="advantages-list__item">
+            <li class="work-principle-list__item">
               <div
-                class="advantages-list__icon-container advantages-list__icon-container--watch"
+                class="work-principle-list__icon-container work-principle-list__icon-container--watch"
               ></div>
-              <p class="advantages-list__description description">
+              <p class="work-principle-list__description description">
                 Уже через месяц наслаждайтесь изменениями к лучшему вашего
                 питомца!
               </p>
@@ -157,26 +159,28 @@
       <!-- Живой пример -->
       <section class="example">
         <div class="example__wrapper container">
-          <h2 class="example__title title">Живой пример</h2>
-          <p class="example__description">
-            Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на
-            Cat Energy Slim. Отличный результат без изнуряющих тренировок! При
-            этом он не менял своих привычек и по-прежнему спит по 16 часов в
-            день.
-          </p>
-          <dl class="example__list">
-            <div class="example__item">
-              <dt class="example__heading">5 кг</dt>
-              <dd class="example__description">снижение веса</dd>
+          <div class="example__container-description">
+            <h2 class="example__title title">Живой пример</h2>
+            <p class="example__description">
+              Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм
+              на Cat Energy Slim. Отличный результат без изнуряющих тренировок!
+              При этом он не менял своих привычек и по-прежнему спит по 16 часов
+              в день.
+            </p>
+            <dl class="example__list">
+              <div class="example__item">
+                <dt class="example__heading">5 кг</dt>
+                <dd class="example__text">снижение веса</dd>
+              </div>
+              <div class="example__item">
+                <dt class="example__heading">60 дней</dt>
+                <dd class="example__text">затрачено времени</dd>
+              </div>
+            </dl>
+            <div class="example__result">
+              <p class="example__expenses">Затраты на питание:</p>
+              <div class="example__price">15 000 руб.</div>
             </div>
-            <div class="example__item">
-              <dt class="example__heading">60 дней</dt>
-              <dd class="example__description">затрачено времени</dd>
-            </div>
-          </dl>
-          <div class="example__result">
-            <p class="example__expenses">Затраты на питание:</p>
-            <div class="example__price">15 000 руб.</div>
           </div>
           <div class="example__cat cat-result">
             <img
@@ -212,7 +216,15 @@
             </address>
           </div>
           <!-- здесь будет карта -->
-          <div class="location__map map"></div>
+          <div class="location__map map">
+            <img
+              class="map__image"
+              src="./img/map-mobile.png"
+              width="320"
+              height="362"
+              alt="Карта"
+            />
+          </div>
         </div>
       </section>
     </main>
@@ -224,7 +236,7 @@
         <div class="main-footer__logo logo">
           <a class="logo__image" href="index.html">
             <img
-              src="./img/logo-cat-energy-name-mobile.svg"
+              src="./img/cat-energy-text-mobile.svg"
               width="128"
               height="24"
               alt="Кэт энерджи"
